--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
     <main>
         <h1>NYC Landmarks Virtual Tour</h1>
         <p class="intro">This site highlights some interesting landmarks across New York City's five boroughs.</p>
+        <p>New York City is filled with landmarks, tourist attractions and historic sites dating from before it was
+            known as New York City to more recent additions. Click through this site to explore!</p>
+        <div class="videoWrapper ratio-16-9">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ECfleExsU6o?si=olyaghStMz-gs8s1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+        <div class="videoWrapper ratio-16-9">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/h4cnMYfVltQ?si=r9qRH1Du2Hl4qRYY"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
         <h2>Featured Landmark</h2>
         <!-- Featured image using <picture> -->
         <picture>
@@ -29,21 +44,36 @@
             <img src="images/pexels-kelsey-caroline-774981359-19122990.jpg"
                 alt="Wonder Wheel ferris wheel at Coney Island">
         </picture>
-        <h3>NYC Landmarks</h3>
+
         <div class="landmarks-grid">
-            <figure>
-                <img src="images/square/pexels-kelsey-caroline-774981359-19122990.jpg"
-                    alt="Wonder Wheel ferris wheel at Coney Island">
-                <figcaption>
-                    <a href="https://www.pexels.com/photo/ferris-wheel-in-amusement-park-19122990/">Photo by Kelsey
-                        Caroline</a>
-                </figcaption>
-            </figure>
+            <div class="landmark">
+                <figure>
+                    <img src="images/square/pexels-kelsey-caroline-774981359-19122990.jpg"
+                        alt="Wonder Wheel ferris wheel at Coney Island">
+                    <figcaption class="text-caption">
+                        <a href="https://www.pexels.com/photo/ferris-wheel-in-amusement-park-19122990/">Photo by Kelsey
+                            Caroline</a>
+                    </figcaption>
+                </figure>
+                <h3>NYC Landmarks</h3>
+                <p>The Wonder Wheel is the iconic ferris wheel at Deno’s Wonder Wheel Amusement Park in Coney
+                    Island, Brooklyn. Standing 150 feet tall, it has been a centerpiece of the boardwalk skyline
+                    since its debut in 1920.</p>
+                <p>Coney Island has been a hub of seaside amusement for more than a century, known for its thrilling
+                    rides, bright lights, and summertime energy. From the historic Cyclone roller coaster to modern
+                    attractions, it remains one of New York City’s most beloved destinations for fun by the beach.
+                </p>
+            </div>
             <figure>
                 <img src="images/square/pexels-mora-versio-2150673251-34091093.jpg" alt="Statue of Liberty">
                 <figcaption>
                     <a href="https://www.pexels.com/photo/statue-of-liberty-in-new-york-city-usa-34091093/">Photo by
                         Mora Versio</a>
+                    <p>The Statue of Liberty, officially named Liberty Enlightening the World (French: La Liberté
+                        éclairant le monde), is a colossal sculpture that has been an iconic centerpiece of New York
+                        Harbor since its dedication on October 28, 1886. Standing as one of the most recognizable
+                        symbols of the United States, she represents ideals of freedom, democracy, and enlightenment.
+                    </p>
                 </figcaption>
             </figure>
             <figure>
@@ -52,6 +82,12 @@
                 <figcaption>
                     <a href="https://unsplash.com/photos/a-large-ferry-boat-in-a-body-of-water-YOCN1a1m_dg">Photo by
                         Praswin Prakashan</a>
+                    <p>Forget crowded subways and expensive tours—the Staten Island Ferry is one of New York City's
+                        best-kept secrets. It's more than just a commute; it's a free, 25-minute cruise offering
+                        unparalleled views of the world's most famous skyline.</p>
+                    <p>t’s truly the city’s aquatic lifeline, running non-stop, day and night. This iconic journey
+                        delivers a perfect, close-up look at the Statue of Liberty, making it a must-do for any visitor.
+                    </p>
                 </figcaption>
             </figure>
             <figure>
@@ -59,13 +95,25 @@
                 <figcaption>
                     <a href="https://www.pexels.com/photo/yankee-stadium-under-the-blue-sky-12360516/">Photo by Malcolm
                         Hill</a>
+                    <p>More than a ballpark, Yankee Stadium is the cathedral of baseball, where 27 championships were
+                        forged and legends like Ruth and Jeter still feel close enough to touch.</p>
+                    <p>Step inside The House That Legends Built: a modern masterpiece wrapped in tradition, offering
+                        electric energy and iconic views of Monument Park where baseball history is literally carved in
+                        stone.</p>
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/square/pexels-loquellano-12404963.jpg"
                     alt="Roosevelt Island Tramway leaving Manhattan">
-                <a href="https://www.pexels.com/photo/cable-car-above-city-street-12404963/">Photo by Raphael
-                    Loquellano</a>
+                <figcaption>
+                    <a href="https://www.pexels.com/photo/cable-car-above-city-street-12404963/">Photo by Raphael
+                        Loquellano</a>
+                    <p>The Roosevelt Island Tramway is a unique and thrilling piece of New York City's public transit
+                        system, offering a spectacular aerial perspective unlike any other commuter ride. It connects
+                        Manhattan's Upper East Side to Roosevelt Island, rising high above the traffic and the East
+                        River.
+                    </p>
+                </figcaption>
             </figure>
         </div>
     </main>
