--- a/index.html
+++ b/index.html
@@ -44,18 +44,19 @@
             <img src="images/pexels-kelsey-caroline-774981359-19122990.jpg"
                 alt="Wonder Wheel ferris wheel at Coney Island">
         </picture>
-
+        <h3>NYC Landmarks</h3>
         <div class="landmarks-grid">
             <div class="landmark">
                 <figure>
                     <img src="images/square/pexels-kelsey-caroline-774981359-19122990.jpg"
                         alt="Wonder Wheel ferris wheel at Coney Island">
+
                     <figcaption class="text-caption">
                         <a href="https://www.pexels.com/photo/ferris-wheel-in-amusement-park-19122990/">Photo by Kelsey
                             Caroline</a>
                     </figcaption>
                 </figure>
-                <h3>NYC Landmarks</h3>
+                <h3>Wonder Wheel ferris wheel at Coney Island</h3>
                 <p>The Wonder Wheel is the iconic ferris wheel at Deno’s Wonder Wheel Amusement Park in Coney
                     Island, Brooklyn. Standing 150 feet tall, it has been a centerpiece of the boardwalk skyline
                     since its debut in 1920.</p>
@@ -64,57 +65,82 @@
                     attractions, it remains one of New York City’s most beloved destinations for fun by the beach.
                 </p>
             </div>
+        </div>
+        <div class="landmark">
             <figure>
                 <img src="images/square/pexels-mora-versio-2150673251-34091093.jpg" alt="Statue of Liberty">
+
                 <figcaption>
                     <a href="https://www.pexels.com/photo/statue-of-liberty-in-new-york-city-usa-34091093/">Photo by
                         Mora Versio</a>
-                    <p>The Statue of Liberty, officially named Liberty Enlightening the World (French: La Liberté
-                        éclairant le monde), is a colossal sculpture that has been an iconic centerpiece of New York
-                        Harbor since its dedication on October 28, 1886. Standing as one of the most recognizable
-                        symbols of the United States, she represents ideals of freedom, democracy, and enlightenment.
-                    </p>
+
                 </figcaption>
             </figure>
+            <h3>Statue of Liberty</h3>
+            <p>The Statue of Liberty, officially named Liberty Enlightening the World (French: La Liberté
+                éclairant le monde), is a colossal sculpture that has been an iconic centerpiece of New York
+                Harbor since its dedication on October 28, 1886.</p>
+            <p>Standing as one of the most recognizable
+                symbols of the United States, she represents ideals of freedom, democracy, and enlightenment.</p>
+        </div>
+        <div class="landmark">
             <figure>
                 <img src="images/square/praswin-prakashan-YOCN1a1m_dg-unsplash.jpg"
                     alt="Island Ferry pulling into the dock">
+
                 <figcaption>
                     <a href="https://unsplash.com/photos/a-large-ferry-boat-in-a-body-of-water-YOCN1a1m_dg">Photo by
                         Praswin Prakashan</a>
-                    <p>Forget crowded subways and expensive tours—the Staten Island Ferry is one of New York City's
-                        best-kept secrets. It's more than just a commute; it's a free, 25-minute cruise offering
-                        unparalleled views of the world's most famous skyline.</p>
-                    <p>t’s truly the city’s aquatic lifeline, running non-stop, day and night. This iconic journey
-                        delivers a perfect, close-up look at the Statue of Liberty, making it a must-do for any visitor.
-                    </p>
                 </figcaption>
             </figure>
+            <h3>Staten Island Ferry</h3>
+            <p>Forget crowded subways and expensive tours—the Staten Island Ferry is one of New York City's
+                best-kept secrets. It's more than just a commute; it's a free, 25-minute cruise offering
+                unparalleled views of the world's most famous skyline.</p>
+            <p>t’s truly the city’s aquatic lifeline, running non-stop, day and night. This iconic journey
+                delivers a perfect, close-up look at the Statue of Liberty, making it a must-do for any visitor.
+            </p>
+        </div>
+        <div class="landmark">
             <figure>
                 <img src="images/square/pexels-malcolmhill-12360516.jpg" alt="Yankee Stadium">
+
                 <figcaption>
-                    <a href="https://www.pexels.com/photo/yankee-stadium-under-the-blue-sky-12360516/">Photo by Malcolm
+                    <a href="https://www.pexels.com/photo/yankee-stadium-under-the-blue-sky-12360516/">Photo by
+                        Malcolm
                         Hill</a>
-                    <p>More than a ballpark, Yankee Stadium is the cathedral of baseball, where 27 championships were
-                        forged and legends like Ruth and Jeter still feel close enough to touch.</p>
-                    <p>Step inside The House That Legends Built: a modern masterpiece wrapped in tradition, offering
-                        electric energy and iconic views of Monument Park where baseball history is literally carved in
-                        stone.</p>
+
                 </figcaption>
             </figure>
+            <h3>Yankee Stadium</h3>
+            <p>Yankee Stadium, located in the Bronx, New York City, is one of the most iconic sports venues in
+                the world. Opened in 2009, it serves as the home ballpark for the New York Yankees, one of
+                Major League Baseball's most successful franchises.</p>
+            <p>The stadium is renowned for its modern amenities, state-of-the-art facilities, and its homage to
+                the rich
+                history of the Yankees. It features a seating capacity of over 47,000 and includes various
+                dining options, luxury suites, and a museum dedicated to the team's storied past.
+            </p>
+        </div>
+        <div class="landmark">
             <figure>
                 <img src="images/square/pexels-loquellano-12404963.jpg"
                     alt="Roosevelt Island Tramway leaving Manhattan">
+
                 <figcaption>
-                    <a href="https://www.pexels.com/photo/cable-car-above-city-street-12404963/">Photo by Raphael
+                    <a href="https://www.pexels.com/photo/cable-car-above-city-street-12404963/">Photo by
+                        Raphael
                         Loquellano</a>
-                    <p>The Roosevelt Island Tramway is a unique and thrilling piece of New York City's public transit
-                        system, offering a spectacular aerial perspective unlike any other commuter ride. It connects
-                        Manhattan's Upper East Side to Roosevelt Island, rising high above the traffic and the East
-                        River.
-                    </p>
+
                 </figcaption>
             </figure>
+            <h3>Roosevelt Island Tramway</h3>
+            <p>The Roosevelt Island Tramway is an aerial tramway in New York City that connects Roosevelt
+                Island to the Upper East Side of Manhattan. Opened in 1976, it offers stunning views of the
+                East River, Manhattan skyline, and the United Nations headquarters.</p>
+            <p>The tramway is not only a practical mode of transportation for residents and visitors but
+                also a popular tourist attraction, providing a unique perspective of the city from above.
+            </p>
         </div>
     </main>
 
