updated color css

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </div>
 
         <div class="videoWrapper ratio-16-9">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/h4cnMYfVltQ?si=r9qRH1Du2Hl4qRYY"
-                title="YouTube video player"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/_xkg7pNSp9M?si=OR-Bu7FdLzd63o8M"
+                title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
@@ -98,7 +98,7 @@
                 <p>Forget crowded subways and expensive tours—the Staten Island Ferry is one of New York City's
                     best-kept secrets. It's more than just a commute; it's a free, 25-minute cruise offering
                     unparalleled views of the world's most famous skyline.</p>
-                <p>t's truly the city's aquatic lifeline, running non-stop, day and night. This iconic journey
+                <p>It's truly the city's aquatic lifeline, running non-stop, day and night. This iconic journey
                     delivers a perfect, close-up look at the Statue of Liberty, making it a must-do for any visitor.
                 </p>
             </div>
@@ -134,7 +134,12 @@
                     </figcaption>
                 </figure>
                 <h3>Empire State Building with lower Manhattan in the background</h3>
-
+                <p>The Empire State Building is a world-famous skyscraper located in Midtown Manhattan, New York
+                    City. Completed in 1931, it stood as the tallest building in the world for nearly 40 years,
+                    reaching a height of 1,454 feet (including its antenna).</p>
+                <p>The building is an iconic symbol of New York City and American ingenuity, known for its Art
+                    Deco architecture and stunning views from its observation decks on the 86th and 102nd floors.
+                </p>
             </div>
             <div class="landmark">
                 <figure>
