Added square images and new styles

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="videoWrapper ratio-16-9">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/_xkg7pNSp9M?si=OR-Bu7FdLzd63o8M"
-                title="YouTube video player" frameborder="0"
+                title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
