landmark pages created

--- a/landmark-wonder.html
+++ b/landmark-wonder.html
@@ -37,12 +37,6 @@
                 open seasonally from spring through fall. It features 24 passenger cars—some fixed, some sliding—and
                 provides views of the ocean, beach, and surrounding amusement district.</p>
 
-            <div class="videoWrapper ratio-16-9">
-                <iframe src="https://www.youtube.com/embed/eTFAeY-8xOg?si=4bXX5sNduXuLqSBX" title="YouTube video player"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-
             <h3>More Info</h3>
             <ul>
                 <li> <a href="https://en.wikipedia.org/wiki/Wonder_Wheel" target="_blank" rel="noopener">Wikipedia:
@@ -78,6 +72,21 @@
                     <img src="images/square/WonderWheelNewYork.jpg" alt="Wonder Wheel New York">
                     <figcaption>Wonder Wheel New York</figcaption>
                 </figure>
+            </div>
+            <div class="videoWrapper ratio-16-9">
+                <iframe src="https://www.youtube.com/embed/eTFAeY-8xOg?si=4bXX5sNduXuLqSBX" title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="videoWrapper ratio-16-9">
+                <iframe src="https://www.youtube.com/embed/L31L__hysio?si=fZV0pjhUqdPhAboP" title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="videoWrapper ratio-16-9">
+                <iframe src="https://www.youtube.com/embed/5BpX1k9bjXY?si=npTa4CzHuOo4ESbK" title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <nav id="pagination">
                 <a class="btn" rel="prev" href="landmark-tram.html">← Previous</a>
